--- a/WeatherSound/WeatherSound/MainView.storyboard
+++ b/WeatherSound/WeatherSound/MainView.storyboard
@@ -37,7 +37,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="nB8-rg-wyN">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="Krn-tE-IX6">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="NI6-cK-IrC">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="NI6-cK-IrC">
                                 <rect key="frame" x="16" y="7" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="HOME">
@@ -47,7 +47,7 @@
                         </barButtonItem>
                         <rightBarButtonItems>
                             <barButtonItem style="plain" id="siG-Vh-EfE">
-                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YkI-eQ-8HQ">
+                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YkI-eQ-8HQ">
                                     <rect key="frame" x="276" y="7" width="83" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal" title="MY">
@@ -95,10 +95,40 @@
                                 <rect key="frame" x="40" y="113" width="295" height="440"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" red="0.74470830306621794" green="0.82677904714831563" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="xdj-wc-8MZ">
                                     <rect key="frame" x="0.0" y="0.0" width="295" height="300"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Nv-ud-Vz8">
+                                            <rect key="frame" x="8" y="253" width="70" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" title="내 리스트 &gt;"/>
+                                            <connections>
+                                                <action selector="MyListButtonTouched:" destination="WRg-H2-3Pn" eventType="touchUpInside" id="X7S-xL-Hfa"/>
+                                            </connections>
+                                        </button>
+                                        <view clipsSubviews="YES" contentMode="center" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="evl-Ln-cct">
+                                            <rect key="frame" x="-8" y="0.0" width="295" height="245"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="66T-ws-v6v">
+                                                    <rect key="frame" x="156" y="170" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pm6-d1-Fiv">
+                                                    <rect key="frame" x="126" y="62" width="102" height="100"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListCell" id="Chr-zo-ugq">
@@ -115,22 +145,27 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="myListButton" destination="9Nv-ud-Vz8" id="jUz-uo-C8K"/>
                         <outlet property="myPageTableView" destination="CXy-Ck-0hg" id="j9X-Hx-uaS"/>
-                        <outlet property="userInfoView" destination="xdj-wc-8MZ" id="jTQ-V2-M9k"/>
+                        <outlet property="profileImgView" destination="pm6-d1-Fiv" id="a8M-o6-BOR"/>
+                        <outlet property="profileLable" destination="66T-ws-v6v" id="yuM-po-q4d"/>
+                        <outlet property="userInfoView" destination="evl-Ln-cct" id="vdo-bc-aRi"/>
+                        <outlet property="userInfoViewContainer" destination="xdj-wc-8MZ" id="18G-37-T7s"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Ye-eQ-s3G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1620" y="123"/>
+            <point key="canvasLocation" x="1620" y="122.78860569715144"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mGJ-9a-wHf">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ThE-Sh-Mb3" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="O0n-LN-6eE">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="O0n-LN-6eE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
