--- a/WeatherSound/WeatherSound/DY.storyboard
+++ b/WeatherSound/WeatherSound/DY.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="hrH-8r-Zwr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="hrH-8r-Zwr">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -27,7 +27,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <segue destination="ZyH-9i-YNl" kind="embed" id="xbZ-Y3-HtN"/>
+                                    <segue destination="QTa-79-RnM" kind="embed" id="ghm-SZ-SIK"/>
                                 </connections>
                             </containerView>
                         </subviews>
@@ -44,50 +44,13 @@
             </objects>
             <point key="canvasLocation" x="-158" y="124"/>
         </scene>
-        <!--First View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--MainView-->
+        <scene sceneID="zqz-fb-yeH">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="FirstViewController" customModule="WeatherSound" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="In2-3S-OQ4">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="oa6-Z6-ewj">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oa6-Z6-ewj" id="e9i-nr-h7a">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="0OU-KX-QUq"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Q9d-rp-L9A"/>
-                                </connections>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="In2-3S-OQ4" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Lqe-7I-kZb"/>
-                            <constraint firstItem="In2-3S-OQ4" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="Mze-Hu-HZO"/>
-                            <constraint firstItem="In2-3S-OQ4" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="pCp-PY-Upp"/>
-                            <constraint firstItem="In2-3S-OQ4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="u4T-be-3yY"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="USm-RG-84C"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="MainView" id="QTa-79-RnM" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d5p-3s-NDh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1329" y="133"/>
+            <point key="canvasLocation" x="741" y="82"/>
         </scene>
         <!--Music Player View Controller-->
         <scene sceneID="gjM-ye-1qM">
@@ -249,24 +212,6 @@
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2084" y="124"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="cv6-Fs-1Ml">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZyH-9i-YNl" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Q8T-J2-bRR">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ALK-ze-WSr"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="p9e-z6-KBq" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="604" y="133"/>
         </scene>
     </scenes>
     <resources>
