--- a/WeatherSound/WeatherSound/LoginAndSignup.storyboard
+++ b/WeatherSound/WeatherSound/LoginAndSignup.storyboard
@@ -773,7 +773,7 @@
                                     <constraint firstAttribute="height" constant="50" id="SIV-M6-qUh"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="20"/>
-                                <state key="normal" title="저장">
+                                <state key="normal" title="변경사항 저장">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
